[gd_scene load_steps=39 format=3 uid="uid://cgvs5uaowgbb0"]

[ext_resource type="Script" path="res://Scripts/Ursula.gd" id="1_ptnex"]
[ext_resource type="Texture2D" uid="uid://bndim4086yvlu" path="res://Sprite/FinalBoss/tileset.png" id="1_ufk74"]

[sub_resource type="AtlasTexture" id="AtlasTexture_8wb8t"]
atlas = ExtResource("1_ufk74")
region = Rect2(0, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ggljq"]
atlas = ExtResource("1_ufk74")
region = Rect2(64, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_od6o4"]
atlas = ExtResource("1_ufk74")
region = Rect2(128, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0ug2c"]
atlas = ExtResource("1_ufk74")
region = Rect2(192, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3vv7a"]
atlas = ExtResource("1_ufk74")
region = Rect2(256, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3jlmh"]
atlas = ExtResource("1_ufk74")
region = Rect2(320, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_sqkr3"]
atlas = ExtResource("1_ufk74")
region = Rect2(384, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_twotd"]
atlas = ExtResource("1_ufk74")
region = Rect2(448, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7d50a"]
atlas = ExtResource("1_ufk74")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_yhcps"]
atlas = ExtResource("1_ufk74")
region = Rect2(0, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vkiov"]
atlas = ExtResource("1_ufk74")
region = Rect2(64, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_md73x"]
atlas = ExtResource("1_ufk74")
region = Rect2(128, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5qxkb"]
atlas = ExtResource("1_ufk74")
region = Rect2(192, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_m5o83"]
atlas = ExtResource("1_ufk74")
region = Rect2(256, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_yk0of"]
atlas = ExtResource("1_ufk74")
region = Rect2(320, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_pgelq"]
atlas = ExtResource("1_ufk74")
region = Rect2(384, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xtof4"]
atlas = ExtResource("1_ufk74")
region = Rect2(448, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_mciw5"]
atlas = ExtResource("1_ufk74")
region = Rect2(0, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_p0u4c"]
atlas = ExtResource("1_ufk74")
region = Rect2(64, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_g510y"]
atlas = ExtResource("1_ufk74")
region = Rect2(0, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_sofqy"]
atlas = ExtResource("1_ufk74")
region = Rect2(64, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0d13j"]
atlas = ExtResource("1_ufk74")
region = Rect2(128, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_k2s6h"]
atlas = ExtResource("1_ufk74")
region = Rect2(192, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_f617t"]
atlas = ExtResource("1_ufk74")
region = Rect2(256, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3revf"]
atlas = ExtResource("1_ufk74")
region = Rect2(320, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_lbawg"]
atlas = ExtResource("1_ufk74")
region = Rect2(384, 128, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_67qo7"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8wb8t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ggljq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_od6o4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0ug2c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3vv7a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3jlmh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sqkr3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_twotd")
}],
"loop": true,
"name": &"Firestrike",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7d50a")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_yhcps")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vkiov")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_md73x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5qxkb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m5o83")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yk0of")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pgelq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xtof4")
}],
"loop": true,
"name": &"KarateAttack",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mciw5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p0u4c")
}],
"loop": true,
"name": &"Walking",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_g510y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sofqy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0d13j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k2s6h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f617t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3revf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lbawg")
}],
"loop": true,
"name": &"WebInvoke",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_sbann"]
size = Vector2(20, 55)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_357oe"]
size = Vector2(20, 53)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dbfhy"]
size = Vector2(380, 90)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_44sgo"]
size = Vector2(29, 29)

[sub_resource type="Animation" id="Animation_ugtly"]
resource_name = "BulletLoad"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Bullet:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0.25, 0.25), Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Bullet:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_lnnwp"]
resource_name = "Damaged"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0.996078, 0, 0, 1), Color(1, 1, 1, 1), Color(0.996078, 0, 0, 1), Color(1, 1, 1, 1), Color(0.996078, 0, 0, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_7h6nt"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Bullet:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.25, 0.25)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Bullet:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_cfwum"]
resource_name = "death"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 0, 0, 1), Color(1, 1, 1, 0.705882), Color(1, 0, 0, 1), Color(1, 1, 1, 0.392157), Color(1, 0, 0, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_lhyqe"]
_data = {
"BulletLoad": SubResource("Animation_ugtly"),
"Damaged": SubResource("Animation_lnnwp"),
"RESET": SubResource("Animation_7h6nt"),
"death": SubResource("Animation_cfwum")
}

[node name="Node2D2" type="CharacterBody2D"]
script = ExtResource("1_ptnex")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_67qo7")
animation = &"KarateAttack"
frame = 7
frame_progress = 0.797445

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 3.5)
shape = SubResource("RectangleShape2D_sbann")

[node name="Hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(0, 3.5)
shape = SubResource("RectangleShape2D_357oe")
debug_color = Color(0.894118, 0, 0.560784, 0.419608)

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(1.5, -14)
shape = SubResource("RectangleShape2D_dbfhy")
debug_color = Color(1, 0.0235294, 0, 0.419608)

[node name="KarateHitBox" type="Area2D" parent="."]
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="KarateHitBox"]
position = Vector2(14.5, 16.5)
shape = SubResource("RectangleShape2D_44sgo")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_lhyqe")
}

[connection signal="area_entered" from="Hitbox" to="." method="_on_bullet_and_area_area_entered"]
[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_entered" from="KarateHitBox" to="." method="_on_karate_hit_box_area_entered"]
